--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -1,68 +1,136 @@
-<footer class="main-footer">
+<footer class="main_footer_con">
   <div class="container">
-    <div class="row row-col-gap" data-gutter="60">
-      <div class="col-sm-4 col-xs-12">
-        <h4 class="widget-title-sm">ByeBuying</h4>
-        <!--<h4 class="widget-title-sm">Barter</h4>-->
-        <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad, +91 8911903906</p>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="footer_widget">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="/about_us">About Us</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li>Connect with us
+              <ul class="main-footer-social-list">
+                <li>
+                  <a class="fa fa-facebook" href="https://www.facebook.com/MySolutions4u-1156251417739141/"></a>
+                </li>
+                <li>
+                  <a class="fa fa-twitter" href="https://twitter.com/vasudevkaushik9"></a>
+                </li>
+                <li>
+                  <a class="fa fa-pinterest" href="https://www.linkedin.com/today/posts/mohit-sikka+0_2YoSWVv2pcQ97ovRJZihaX"></a>
+                </li>
+                <li>
+                  <a class="fa fa-instagram" href="http://yooying.com/sikk_moh"></a>
+                </li>
+                <li>
+                  <a class="fa fa-google-plus" href="https://plus.google.com/105215932820925656620/posts"></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="col-sm-4 col-xs-12">
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="footer_widget">
+          <h3>Policy Info</h3>
+          <ul>
+            <li><a href="/terms_condition">Terms & Conditions</a></li>
+            <li><a href="/privacy_policy">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="footer_widget">
+          <h3>Need Some Help..?</h3>
+          <ul>
+            <li><a href="/about_us">FAQ</a></li>
+            <li><a href="/how_it_works">How the site works?</a></li>
+            <li><a href="/contact_us">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="footer_widget">
+          <h3>ByeBuying Subscription</h3>
 
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <h4 class="widget-title-sm">Connect with us</h4>
-        <ul class="main-footer-social-list">
-          <li>
-            <a class="fa fa-facebook" href="https://www.facebook.com/MySolutions4u-1156251417739141/"></a>
-          </li>
-          <li>
-            <a class="fa fa-twitter" href="https://twitter.com/vasudevkaushik9"></a>
-          </li>
-          <li>
-            <a class="fa fa-pinterest" href="https://www.linkedin.com/today/posts/mohit-sikka+0_2YoSWVv2pcQ97ovRJZihaX"></a>
-          </li>
-          <li>
-            <a class="fa fa-instagram" href="http://yooying.com/sikk_moh"></a>
-          </li>
-          <li>
-            <a class="fa fa-google-plus" href="https://plus.google.com/105215932820925656620/posts"></a>
-          </li>
-        </ul>
+          <form action="" class="footer_form">
+            <input type="text" class="footer_textfield" placeholder="enter your email address" />
+            <input type="submit" class="footer_submit" value="SUBSCRIBE" />
+            <p>Subscribe to promotions & updates on products/services</p>
+            <div class="app_icon_con">
+              <%= image_tag 'theme_img/android-app-icon.png', class: 'img-responsive' %>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
 </footer>
-<div class="copyright-area">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. All rights reserved
-        <!--<p class="copyright-text">Copyright &copy; <a href="/">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved-->
-          <a href="/terms_condition">Terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
-      </div>
-      <!--<div class="col-md-6">-->
-        <!--<ul class="payment-icons-list">-->
-          <!--<li>-->
-            <!--<img src="img/payment/visa-straight-32px.png" alt="Image Alternative text" title="Pay with Visa" />-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<img src="img/payment/mastercard-straight-32px.png" alt="Image Alternative text" title="Pay with Mastercard" />-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<img src="img/payment/paypal-straight-32px.png" alt="Image Alternative text" title="Pay with Paypal" />-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<img src="img/payment/visa-electron-straight-32px.png" alt="Image Alternative text" title="Pay with Visa-electron" />-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<img src="img/payment/maestro-straight-32px.png" alt="Image Alternative text" title="Pay with Maestro" />-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<img src="img/payment/discover-straight-32px.png" alt="Image Alternative text" title="Pay with Discover" />-->
-          <!--</li>-->
-        <!--</ul>-->
-      <!--</div>-->
-    </div>
-  </div>
-</div>
-</div>
+
+<!--<footer class="main-footer">-->
+<!--<div class="container">-->
+<!--<div class="row row-col-gap" data-gutter="60">-->
+<!--<div class="col-sm-4 col-xs-12">-->
+<!--<h4 class="widget-title-sm">ByeBuying</h4>-->
+<!--&lt;!&ndash;<h4 class="widget-title-sm">Barter</h4>&ndash;&gt;-->
+<!--<p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad, +91 8911903906</p>-->
+<!--</div>-->
+<!--<div class="col-sm-4 col-xs-12">-->
+
+<!--</div>-->
+<!--<div class="col-sm-4 col-xs-12">-->
+<!--<h4 class="widget-title-sm">Connect with us</h4>-->
+<!--<ul class="main-footer-social-list">-->
+<!--<li>-->
+<!--<a class="fa fa-facebook" href="https://www.facebook.com/MySolutions4u-1156251417739141/"></a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<a class="fa fa-twitter" href="https://twitter.com/vasudevkaushik9"></a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<a class="fa fa-pinterest" href="https://www.linkedin.com/today/posts/mohit-sikka+0_2YoSWVv2pcQ97ovRJZihaX"></a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<a class="fa fa-instagram" href="http://yooying.com/sikk_moh"></a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<a class="fa fa-google-plus" href="https://plus.google.com/105215932820925656620/posts"></a>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</footer>-->
+<!--<div class="copyright-area">-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-md-12">-->
+<!--<p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. All rights reserved-->
+<!--&lt;!&ndash;<p class="copyright-text">Copyright &copy; <a href="/">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved&ndash;&gt;-->
+<!--<a href="/terms_condition">Terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>-->
+<!--</div>-->
+<!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+<!--&lt;!&ndash;<ul class="payment-icons-list">&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/visa-straight-32px.png" alt="Image Alternative text" title="Pay with Visa" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/mastercard-straight-32px.png" alt="Image Alternative text" title="Pay with Mastercard" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/paypal-straight-32px.png" alt="Image Alternative text" title="Pay with Paypal" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/visa-electron-straight-32px.png" alt="Image Alternative text" title="Pay with Visa-electron" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/maestro-straight-32px.png" alt="Image Alternative text" title="Pay with Maestro" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;<li>&ndash;&gt;-->
+<!--&lt;!&ndash;<img src="img/payment/discover-straight-32px.png" alt="Image Alternative text" title="Pay with Discover" />&ndash;&gt;-->
+<!--&lt;!&ndash;</li>&ndash;&gt;-->
+<!--&lt;!&ndash;</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
