--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -252,7 +252,7 @@
                 <!--<article class="product-review">-->
                   <!--<div class="product-review-content-full">-->
                     <!--<h5 class="product-review-title">-->
-                      <!--<%=# rating.title %>-->
+                      <!--<%#= rating.title %>-->
                     <!--</h5>-->
                     <!--<ul class="product-page-product-rating">-->
                       <!--<%# for i in 1..5 %>-->
