--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -4,7 +4,7 @@
   <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
   <li><%= link_to 'States', admin_states_path %></li>
   <li><%= link_to 'Cities', admin_cities_path %></li>
-  <li><%= link_to 'Advertisements', admin_advertisements_path %></li>
+  <li><%= link_to 'Advertisements', admin_headers_path %></li>
   <li><%= link_to 'Customers', admin_customers_path %></li>
   <li><%= link_to 'Products', admin_products_path %></li>
   <li><%= link_to 'Services', admin_services_path %></li>
