--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -1,42 +1,54 @@
 <%= simple_form_for [:customer, @product] do |f| %>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Product Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Product Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <%end%>
+    <% if @product.admin_verified == false %>
     <div class="col-xs-12">
       <div class="field-con">
         <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender', label: 'Gender' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
       </div>
     </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :name, label: 'Product Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Product Name. Good to put brand name as well.'}, input_html: {class: 'text-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :description, label: 'Product Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Short description of product including details such as brand name, sizes, use, colour, etc.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :technical_specification, label: 'Technical Specification ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Detailed description of the product including technical specifications such as dimension, size, weight, material type, technical details, etc., as applicable.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <label class="label" data-toggle="popover" data-placement="right" title="Please upload images of 500*500 with white background for better demonstration of your products/services">Add Images ⓘ</label>
-        <div class="clearfix" style="height: 15px;"></div>
-        <% unless params[:action] == 'edit' %>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :name, label: 'Product Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Product Name. Good to put brand name as well.'}, input_html: {class: 'text-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :description, label: 'Product Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Short description of product including details such as brand name, sizes, use, colour, etc.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :technical_specification, label: 'Technical Specification ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Detailed description of the product including technical specifications such as dimension, size, weight, material type, technical details, etc., as applicable.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% unless params[:action] == 'edit' %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <label class="label" data-toggle="popover" data-placement="right" title="Please upload images of 500*500 with white background for better demonstration of your products/services">Add Images ⓘ</label>
+            <div class="clearfix" style="height: 15px;"></div>
             <div id="nested-product-images">
               <%#= f.fields_for :product_images do |builder| %>
-                  <%#= render partial: 'application/product_image_fields', locals: { f: builder } %>
+              <%#= render partial: 'application/product_image_fields', locals: { f: builder } %>
               <%#- end %>
               <!--<p id="nested-click"><%#= link_to_add_fields "Add Product Image", f, :product_images %></p>-->
               <span class="preview_img_con">
@@ -75,30 +87,37 @@
                 <div id="target_5" class="target"></div>
               </span>
             </div>
-        <%end%>
-      </div>
-    </div>
-
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the product will be available. We suggest to choose the dates for which you have fair visibility that your product will be available.'}, input_html: {class: 'select-field'} %>
-      </div>
-    </div>
+          </div>
+        </div>
+    <%end%>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the product will be available. We suggest to choose the dates for which you have fair visibility that your product will be available.'}, input_html: {class: 'select-field'} %>
+          </div>
+        </div>
+    <% end %>
     <div class="col-xs-12">
       <div class="field-con">
         <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the product will be available. We suggest to choose the dates for which you have fair visibility that your product will be available.'}, input_html: {class: 'select-field'} %>
@@ -144,16 +163,20 @@
         <%= f.input :cost_of_replacement, label: 'Cost of Replacement ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'If the product is considerably damaged, lost, stolen, this is the amount the renter has to pay to the owner. Cost of replacement should not be more than market value of the product.'}, input_html: {class: 'text-field'} %>
       </div>
     </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :youtube_link, label: 'Product Youtube Link ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'We suggest to make video of your product, upload the video on youtube and share the link of your youtube video for better demonstration of your product.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :youtube_link, label: 'Product Youtube Link ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'We suggest to make video of your product, upload the video on youtube and share the link of your youtube video for better demonstration of your product.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @product.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
     <% unless params[:action] == 'new' %>
         <div class="col-xs-12">
           <div class="field-con">
