--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -1,55 +1,69 @@
 <%= simple_form_for [:customer, @service] do |f| %>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category', label: 'Service Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Service Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12 for_other">
-      <div class="field-con">
-        <%= f.input :nature_of_service, label: 'Nature of Services' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12 membership_blog">
-      <div class="field-con">
-        <%= f.input :club_name, label: 'Service Club Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Name of club/entity for which membership has been taken.'}, input_html: {class: 'text-field'} %>
-      </div>
-      <div class="field-con">
-        <%= f.input :membership_plan, label: '' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the service will be available.'}, input_html: {class: 'select-field'} %>
-      </div>
-    </div>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category', label: 'Service Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Service Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12 for_other">
+          <div class="field-con">
+            <%= f.input :nature_of_service, label: 'Nature of Services' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12 membership_blog">
+          <div class="field-con">
+            <%= f.input :club_name, label: 'Service Club Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Name of club/entity for which membership has been taken.'}, input_html: {class: 'text-field'} %>
+          </div>
+          <div class="field-con">
+            <%= f.input :membership_plan, label: '' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the service will be available.'}, input_html: {class: 'select-field'} %>
+          </div>
+        </div>
+    <% end %>
     <div class="col-xs-12">
       <div class="field-con">
         <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the service will be available.'}, input_html: {class: 'select-field'} %>
       </div>
     </div>
-    <div class="col-xs-12 commercial_space_blog">
-      <div class="field-con">
-        <%= f.input :area_in_meters, label: 'Area in Meters' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
-      </div>
-      <div class="field-con">
-        <%= f.input :amenities_available, label: 'Amenities Available ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Like water/electricity/chairs/tables/parking etc.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :service_description, label: 'Service Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Short description of services provided by you.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <label class="label" data-toggle="popover" data-placement="right" title="Please upload images of 500*500 with white background for better demonstration of your products/services">Add Images ⓘ</label>
-        <div class="clearfix" style="height: 15px;"></div>
-        <% unless params[:action] == 'edit' %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12 commercial_space_blog">
+          <div class="field-con">
+            <%= f.input :area_in_meters, label: 'Area in Meters' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+          </div>
+          <div class="field-con">
+            <%= f.input :amenities_available, label: 'Amenities Available ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Like water/electricity/chairs/tables/parking etc.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :service_description, label: 'Service Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Short description of services provided by you.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% unless params[:action] == 'edit' %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <label class="label" data-toggle="popover" data-placement="right" title="Please upload images of 500*500 with white background for better demonstration of your products/services">Add Images ⓘ</label>
+            <div class="clearfix" style="height: 15px;"></div>
             <div id="nested-service-images">
               <%#= f.fields_for :service_images do |builder| %>
               <%#= render partial: 'application/service_image_fields', locals: { f: builder } %>
@@ -91,24 +105,30 @@
               <div id="target_5" class="target"></div>
             </span>
             </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
     <!--<div class="col-xs-12">-->
     <!--<div class="field-con">-->
     <!--<%#= f.input :price_type, collection: ['Per hour','Per day', 'Per week', 'Per month'], prompt: 'Choose price', label: 'Price Type' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>-->
@@ -145,16 +165,21 @@
         <%= f.input :negotiable %>
       </div>
     </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :youtube_link, label: 'Service Youtube Link ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'We suggest to make video of your service, upload the video on youtube and share the link of your youtube video for better demonstration of your service.'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="field-con">
-        <%= f.input :other, label: 'Other', label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
-      </div>
-    </div>
+
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :youtube_link, label: 'Service Youtube Link ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'We suggest to make video of your service, upload the video on youtube and share the link of your youtube video for better demonstration of your service.'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
+    <% if @service.admin_verified == false %>
+        <div class="col-xs-12">
+          <div class="field-con">
+            <%= f.input :other, label: 'Other', label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+          </div>
+        </div>
+    <% end %>
     <% unless params[:action] == 'new' %>
         <div class="col-xs-12">
           <div class="field-con">
