--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -203,101 +203,101 @@
 </div>
 <div class="gap"></div>
 
-<!--<div class="container">-->
-  <!--<div class="tabbable product-tabs">-->
-    <!--<ul class="nav nav-tabs" id="myTab">-->
-      <!--<li class="active"><a href="#tab-1" data-toggle="tab">Description</a>-->
-      <!--</li>-->
-      <!--<li><a href="#tab-2" data-toggle="tab">Additional Information</a>-->
-      <!--</li>-->
-      <!--<li><a href="#tab-3" data-toggle="tab">Rating and Reviews</a>-->
-      <!--</li>-->
-    <!--</ul>-->
-    <!--<div class="tab-content">-->
-      <!--<div class="tab-pane fade in active" id="tab-1">-->
-        <!--<p>-->
-          <!--<%#= @product.description.present? ? @product.description : 'NA' %>-->
-        <!--</p>-->
-      <!--</div>-->
-      <!--<div class="tab-pane fade" id="tab-2">-->
-        <!--<table class="table">-->
-          <!--<tbody>-->
-          <!--<tr>-->
-            <!--<td>Technical Specification:</td>-->
-            <!--<td><%#= @product.technical_specification.present? ? @product.technical_specification : 'NA' %></td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-            <!--<td>Youtube Link:</td>-->
-            <!--<td>-->
-              <!--<%#if @product.youtube_link.present? %>-->
-                  <!--<a href="<%#= @product.youtube_link %>" target="_blank">-->
-                    <!--<%#= @product.youtube_link %>-->
-                  <!--</a>-->
-              <!--<%# else %>-->
-                  <!--NA-->
-              <!--<%# end %>-->
-            <!--</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-            <!--<td>Other:</td>-->
-            <!--<td><%#= @product.other.present? ? @product.other : 'NA' %></td>-->
-          <!--</tr>-->
-          <!--</tbody>-->
-        <!--</table>-->
-      <!--</div>-->
-      <!--<div class="tab-pane fade" id="tab-3">-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-8">-->
-            <!--<%# @ratings.each do |rating| %>-->
-                <!--<article class="product-review">-->
-                  <!--<div class="product-review-content-full">-->
-                    <!--<h5 class="product-review-title">-->
-                      <!--<%#= rating.title %>-->
-                    <!--</h5>-->
-                    <!--<ul class="product-page-product-rating">-->
-                      <!--<%# for i in 1..5 %>-->
-                          <!--<%# if i <= rating.number %>-->
-                              <!--<li class="rated"><i class="fa fa-star"></i></li>-->
-                          <!--<%# else %>-->
-                              <!--<li class=""><i class="fa fa-star"></i></li>-->
-                          <!--<%# end %>-->
-                      <!--<%# end %>-->
-                    <!--</ul>-->
-                    <!--<p class="product-review-meta">by <%#= rating.user_name %> on <%#= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>-->
-                    <!--<p class="product-review-body"><%#= rating.feedback %></p>-->
-                    <!--<%# if rating.recommand == true %>-->
-                        <!--<p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong></p>-->
-                    <!--<%# else %>-->
-                        <!--<p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong></p>-->
-                    <!--<%# end %>-->
-                  <!--</div>-->
-                <!--</article>-->
-            <!--<%# end %>-->
-          <!--</div>-->
-          <!--<div class="col-md-4">-->
-            <!--<h3 class="product-tab-rating-title">Overall Customer Rating:</h3>-->
-            <!--<ul class="product-page-product-rating product-rating-big">-->
-              <!--<%# for i in 1..5 %>-->
-                  <!--<%# if i <= @product.average_rating %>-->
-                      <!--<li class="rated"><i class="fa fa-star"></i></li>-->
-                  <!--<%# else %>-->
-                      <!--<li class=""><i class="fa fa-star"></i></li>-->
-                  <!--<%# end %>-->
-              <!--<%# end %>-->
-              <!--<li class="count">-->
-                <!--<%#= @product.average_rating.round(1) %>-->
-              <!--</li>-->
-            <!--</ul><small><%#= @product.customer_review %> customer reviews</small>-->
-            <!--<p>-->
-              <!--<strong><%#= (@product.recommand_count * 100) / @product.customer_review %>%</strong>-->
-              <!--of reviewers would recommend this product</p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-<!--<div class="gap"></div>-->
+<div class="container">
+  <div class="tabbable product-tabs">
+    <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a href="#tab-1" data-toggle="tab">Description</a>
+      </li>
+      <li><a href="#tab-2" data-toggle="tab">Additional Information</a>
+      </li>
+      <li><a href="#tab-3" data-toggle="tab">Rating and Reviews</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="tab-1">
+        <p>
+          <%= @product.description.present? ? @product.description : 'NA' %>
+        </p>
+      </div>
+      <div class="tab-pane fade" id="tab-2">
+        <table class="table">
+          <tbody>
+          <tr>
+            <td>Technical Specification:</td>
+            <td><%= @product.technical_specification.present? ? @product.technical_specification : 'NA' %></td>
+          </tr>
+          <tr>
+            <td>Youtube Link:</td>
+            <td>
+              <%if @product.youtube_link.present? %>
+                  <a href="<%= @product.youtube_link %>" target="_blank">
+                    <%= @product.youtube_link %>
+                  </a>
+              <% else %>
+                  NA
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <td>Other:</td>
+            <td><%= @product.other.present? ? @product.other : 'NA' %></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="tab-pane fade" id="tab-3">
+        <div class="row">
+          <div class="col-md-8">
+            <%# @ratings.each do |rating| %>
+                <article class="product-review">
+                  <div class="product-review-content-full">
+                    <h5 class="product-review-title">
+                      <%#= rating.title %>
+                    </h5>
+                    <ul class="product-page-product-rating">
+                      <%# for i in 1..5 %>
+                          <%# if i <= rating.number %>
+                              <li class="rated"><i class="fa fa-star"></i></li>
+                          <%# else %>
+                              <li class=""><i class="fa fa-star"></i></li>
+                          <%# end %>
+                      <%# end %>
+                    </ul>
+                    <p class="product-review-meta">by <%#= rating.user_name %> on <%#= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
+                    <p class="product-review-body"><%#= rating.feedback %></p>
+                    <%# if rating.recommand == true %>
+                        <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong></p>
+                    <%# else %>
+                        <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong></p>
+                    <%# end %>
+                  </div>
+                </article>
+            <%# end %>
+          </div>
+          <div class="col-md-4">
+            <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
+            <ul class="product-page-product-rating product-rating-big">
+              <%# for i in 1..5 %>
+                  <%# if i <= @product.average_rating %>
+                      <li class="rated"><i class="fa fa-star"></i></li>
+                  <%# else %>
+                      <li class=""><i class="fa fa-star"></i></li>
+                  <%# end %>
+              <%# end %>
+              <li class="count">
+                <%#= @product.average_rating.round(1) %>
+              </li>
+            </ul><small><%#= @product.customer_review %> customer reviews</small>
+            <p>
+              <strong><%#= (@product.recommand_count * 100) / @product.customer_review %>%</strong>
+              of reviewers would recommend this product</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="gap"></div>
 
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
