--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -248,31 +248,31 @@
       <div class="tab-pane fade" id="tab-3">
         <div class="row">
           <div class="col-md-8">
-            <%# @ratings.each do |rating| %>
+            <% @ratings.each do |rating| %>
                 <article class="product-review">
                   <div class="product-review-content-full">
                     <h5 class="product-review-title">
-                      <%#= rating.title %>
+                      <%= rating.title %>
                     </h5>
                     <ul class="product-page-product-rating">
-                      <%# for i in 1..5 %>
-                          <%# if i <= rating.number %>
+                      <% for i in 1..5 %>
+                          <% if i <= rating.number %>
                               <li class="rated"><i class="fa fa-star"></i></li>
-                          <%# else %>
+                          <% else %>
                               <li class=""><i class="fa fa-star"></i></li>
-                          <%# end %>
-                      <%# end %>
+                          <% end %>
+                      <% end %>
                     </ul>
-                    <p class="product-review-meta">by <%#= rating.user_name %> on <%#= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
-                    <p class="product-review-body"><%#= rating.feedback %></p>
-                    <%# if rating.recommand == true %>
+                    <p class="product-review-meta">by <%= rating.user_name %> on <%= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
+                    <p class="product-review-body"><%= rating.feedback %></p>
+                    <% if rating.recommand == true %>
                         <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong></p>
-                    <%# else %>
+                    <% else %>
                         <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong></p>
-                    <%# end %>
+                    <% end %>
                   </div>
                 </article>
-            <%# end %>
+            <% end %>
           </div>
           <div class="col-md-4">
             <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
