--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -282,19 +282,19 @@
           <div class="col-md-4">
             <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
             <ul class="product-page-product-rating product-rating-big">
-              <%# for i in 1..5 %>
-                  <%# if i <= @product.average_rating %>
+              <% for i in 1..5 %>
+                  <% if i <= @product.average_rating %>
                       <li class="rated"><i class="fa fa-star"></i></li>
-                  <%# else %>
+                  <% else %>
                       <li class=""><i class="fa fa-star"></i></li>
-                  <%# end %>
-              <%# end %>
+                  <% end %>
+              <% end %>
               <li class="count">
                 <%= @product.average_rating.present? ? @product.average_rating.round(1) : '0' %>
               </li>
             </ul><small><%= @product.customer_review.present? ? @product.customer_review : '0' %> customer reviews</small>
             <p>
-              <strong><%= @product.recommand_count > 0 ?((@product.recommand_count  * 100) / @product.customer_review): '0' %>%</strong>
+              <strong><%#= @product.recommand_count > 0 ?((@product.recommand_count  * 100) / @product.customer_review): '0' %>%</strong>
               of reviewers would recommend this product</p>
           </div>
         </div>
