--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -285,7 +285,10 @@
               <%# for i in 1..5 %>
                   <%# if i <= @product.average_rating %>
                       <li class="rated"><i class="fa fa-star"></i></li>
+                      <li class="rated"><i class="fa fa-star"></i></li>
+                      <li class="rated"><i class="fa fa-star"></i></li>
                   <%# else %>
+                      <li class=""><i class="fa fa-star"></i></li>
                       <li class=""><i class="fa fa-star"></i></li>
                   <%# end %>
               <%# end %>
@@ -294,7 +297,7 @@
               </li>
             </ul><small><%= @product.customer_review.present? ? @product.customer_review : '0' %> customer reviews</small>
             <p>
-              <strong><%= @product.recommand_count > 0 ?((@product.recommand_count  * 100) / @product.customer_review): '0' %>%</strong>
+              <strong><%= @product.recommand_count > 0 ? ((@product.recommand_count  * 100) / @product.customer_review ? @product.customer_review : 1): '0' %>%</strong>
               of reviewers would recommend this product</p>
           </div>
         </div>
