--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -297,8 +297,8 @@
               </li>
             </ul><small><%= @product.customer_review.present? ? @product.customer_review : '0' %> customer reviews</small>
             <p>
-              <%= @product.recommand_count %>
-              <strong><%#= @product.recommand_count > 0 ? ((@product.recommand_count  * 100) / @product.customer_review ? @product.customer_review : 1): '0' %>%</strong>
+              <!--<%= @product.recommand_count %>-->
+              <strong><%= @product.recommand_count>0 ? ((@product.recommand_count  * 100) / (@product.customer_review>0 ? @product.customer_review : 1)): '0' %>%</strong>
               of reviewers would recommend this product</p>
           </div>
         </div>
