--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -289,6 +289,16 @@
                       <!--<li class=""><i class="fa fa-star"></i></li>-->
                   <%# end %>
               <%# end %>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
               <li class="count">
                 <%= @product.average_rating.present? ? @product.average_rating.round(1) : '0.0' %>
               </li>
