--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -282,23 +282,26 @@
           <div class="col-md-4">
             <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
             <ul class="product-page-product-rating product-rating-big">
-              <%# for i in 1..5 %>
-                  <%# if i <= @product.average_rating %>
-                      <!--<li class="rated"><i class="fa fa-star"></i></li>-->
-                  <%# else %>
-                      <!--<li class=""><i class="fa fa-star"></i></li>-->
-                  <%# end %>
-              <%# end %>
-              <li class="rated"><i class="fa fa-star"></i>
-              </li>
-              <li class="rated"><i class="fa fa-star"></i>
-              </li>
-              <li class="rated"><i class="fa fa-star"></i>
-              </li>
-              <li class="rated"><i class="fa fa-star"></i>
-              </li>
-              <li class="rated"><i class="fa fa-star"></i>
-              </li>
+              <% if @product.average_rating > 0 %>
+                  <% for i in 1..5 %>
+                      <% if i <= @product.average_rating.round %>
+                        <li class="rated"><i class="fa fa-star"></i></li>
+                      <% else %>
+                        <!--<li class=""><i class="fa fa-star"></i></li>-->
+                      <% end %>
+                  <% end %>
+              <%else%>
+                  <li class=""><i class="fa fa-star"></i>
+                  </li>
+                  <li class=""><i class="fa fa-star"></i>
+                  </li>
+                  <li class=""><i class="fa fa-star"></i>
+                  </li>
+                  <li class=""><i class="fa fa-star"></i>
+                  </li>
+                  <li class=""><i class="fa fa-star"></i>
+                  </li>
+              <% end %>
               <li class="count">
                 <%= @product.average_rating.present? ? @product.average_rating.round(1) : '0.0' %>
               </li>
