--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -850,6 +850,47 @@ p.lead{
     }
   }
 }
+.custom-nav-tab{
+  border: none;
+  li.active{
+    a{
+      background-color: #23527c;
+      color: #ffffff;
+      border: none;
+    }
+    a:focus{
+      background-color: #23527c !important;
+      color: #ffffff;
+      border: none;
+    }
+    a:hover{
+      background-color: #23527c !important;
+      color: #ffffff;
+      border: none;
+    }
+  }
+  li{
+    margin-bottom: 20px;
+    a{
+      min-width: 140px;
+      border-radius: 4px;
+      text-align: center;
+      border: none;
+      background-color: #d2d2d2;
+    }
+    a:focus{
+      background-color: #d2d2d2 !important;
+      border: none;
+    }
+    a:hover{
+      background-color: #d2d2d2 !important;
+      border: none;
+    }
+  }
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>, .nav-tabs>li.active>a:hover{
+  background-color: transparent;
+}
 @media(max-width: 767px){
   .otp-min-height{
     min-height: inherit;
