--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
+            <ul class="nav navbar-nav navbar-right navbar-right-no-mar custom-upper-nav">
               <li><a href="/about_us">About Us</a>
               </li>
               <li><a href="/listing_policy">Listing Policy</a>
@@ -165,7 +165,7 @@
     <nav class="navbar navbar-inverse navbar-main yamm">
       <div class="container">
         <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+          <button class="navbar-toggle collapsed" type="button" style="background: #395573;" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
             <img src="http://s3.amazonaws.com/byebuyingproduction/advertisement_images/images/000/000/038/original/logo.jpeg?1474540580" class="img-responsive" alt="">
@@ -174,7 +174,8 @@
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Rent by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
+            <li class="dropdown">
+              <a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Rent by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
               <ul class="dropdown-menu dropdown-menu-category">
                 <% @categories.each do |category| %>
                     <li><a href="<%= category_path(category)%>">
@@ -237,7 +238,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-                <li class="dropdown"><a href="javascript:void(0)"><%#= current_user.email %> My Account</a>
+                <li class="dropdown"><a href="javascript:void(0)"><%#= current_user.email %> My Account <i class="drop-caret" data-toggle="dropdown"></i></a>
                   <ul class="dropdown-menu dropdown-menu-shipping-cart">
                     <li><a href="/customer/profile">My Profile</a></li>
                     <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
