--- a/app/views/admin/enquiries/index.html.erb
+++ b/app/views/admin/enquiries/index.html.erb
@@ -18,9 +18,9 @@
             <td><%= enquiry.user.contact %></td>
             <td><%= enquiry.created_at.strftime(time_format) %></td>
             <td>
-              <%= link_to admin_enquiry_path(enquiry) do %>
-                  <i class="fa fa-eye"></i>
-              <%- end %>
+              <%#= link_to admin_enquiry_path(enquiry) do %>
+                  <!--<i class="fa fa-eye"></i>-->
+              <%#- end %>
             </td>
           </tr>
       <%- end %>
